--- a/dev/scss/_news.scss
+++ b/dev/scss/_news.scss
@@ -10,7 +10,6 @@
 .news-title {
   font-weight: 400;
   text-align: center;
-  width: 100%;
   margin-top: 2rem;
 }
 @media (min-width: #{$sliderBreakpoint}) {
